--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="pt">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>São Pedro Fusion Restaurant - Menu Digital</title>
     <meta name="description" content="Menu digital do São Pedro Fusion Restaurant. Sabores de Portugal, Brasil e Itália." />
